force-app/main/default/objects/HelpBookmark__c/HelpBookmark__c.object-meta.xml
<CustomObject>
    <description>A Help Topic bookmarked by a Helped User</description>
    <label>Help Bookmark</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Help Bookmark Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Bookmarks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>