force-app/main/default/objects/HelpBookmark__c/fields/HelpBookmarkLabel__c.field-meta.xml
<CustomField>
    <fullName>HelpBookmarkLabel__c</fullName>
    <description>Optional label to use to refer to the Bookmark instead of Help Topic Name</description>
    <inlineHelpText>Optional label to use to refer to the Bookmark instead of Help Topic Name</inlineHelpText>
    <label>Help Bookmark Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>