force-app/main/default/objects/HelpBookmark__c/fields/HelpTopic__c.field-meta.xml
<CustomField>
    <fullName>HelpTopic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Help Topic that has been bookmarked</inlineHelpText>
    <label>Help Topic</label>
    <referenceTo>HelpTopic__c</referenceTo>
    <relationshipLabel>Help Bookmarks</relationshipLabel>
    <relationshipName>Help_Bookmarks</relationshipName>
    <type>Lookup</type>
</CustomField>