force-app/main/default/objects/HelpBookmark__c/fields/TopicURL__c.field-meta.xml
<CustomField>
    <fullName>TopicURL__c</fullName>
    <inlineHelpText>A link to display the bookmarked Help Topic in the correct Topic-specified Help Topic Template</inlineHelpText>
    <label>Topic URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>